# dpl

./: .gitignore  README.md  main.py  pyproject.toml
examples/: VGG16.py  add_expr_seq2seq.py  adding_problem_rnn.py  attention_dateformat.py  cartpole.py  cbow.py  gridWorld.py  gridWorld_dqn.py  gridWorld_ppo_rnn.py  gridworld_app.py  lstm.py  minigrid_dqn.py  minigrid_drqn.py  minigrid_ppo.py  minigrid_ppo_rnn.py  mnist.py  mnist_cnn.py  mnist_cnn_deep.py  mountaincar.py  pendulum.py  rnn.py  rnnlm_ptb.py  spiral.py  sum_rnn.py  word2vec_ptb.py
examples/datasets/: __init__.py  add_expr.py  adding_problem.py  date_format.py  ptb.py  sincurve.py
examples/mnist_app/: app.py  augment.py  collect_hard_set.py  evaluate.py  model.py  pyproject.toml  train.py
examples/models/: VGG16.py  __init__.py  attention_seq2seq.py  cbow.py  dqn.py  drqn.py  ppo.py  ppo_rnn.py  rnnlm.py  sac.py  seq2seq.py
examples/utils/: __init__.py  corpus.py
src/: analyze_profile.py  computational_graph.py  mnist.py  n_layer_net.py  simple_cnn.py  two_layer_net.py  weight_init.py
src/datasets/: __init__.py  mnist.py  spiral.py
src/dpl/: __init__.py  agent.py  agent_trainer.py  function.py  graph.py  metal.py  operators.py  trainer.py  utils.py  variable.py
src/dpl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/examples/: VGG16.py  lstm.py  mnist.py  (+4 more)
tests/: test_conv2d.py  test_convolution.py  test_dataset.py  test_get_item.py  test_gradient_check.py  test_im2col_backward.py  test_im2col_col2im.py  test_log.py  test_lstm.py  test_pooling.py  test_pooling_func.py  test_rnn.py  test_sequential.py  test_sequential_loader.py  test_simple_cnn.py  test_softmax.py  test_square.py  test_time_rnn.py  test_trainer.py
(+69 files in other folders)
