[project]
name = "dpl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.17.7",
    "matplotlib>=3.10.7",
    "mypy>=1.18.2",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pytest>=9.0.1",
    "scikit-learn>=1.7.2",
]

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true
