[project]
name = "dpl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.2.3",
    "ipython>=9.9.0",
    "jax==0.5.0",
    "jax-metal==0.1.1",
    "jaxlib==0.5.0",
    "marimo>=0.17.7",
    "matplotlib>=3.10.7",
    "mypy>=1.18.2",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pygame>=2.6.1",
    "pytest>=9.0.1",
    "scikit-learn>=1.7.2",
    "snakeviz>=2.2.2",
    "streamlit>=1.52.2",
]

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
